# gen-ui-prototype

./: package.json  pyproject.toml
api/: main.py
app/: actions.tsx  ai.tsx  layout.tsx  page.tsx
app/api/chat/: route.ts
components/ai-elements/: branch.tsx  code-block.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  response.tsx  source.tsx  task.tsx  thinking.tsx  tool.tsx  web-preview.tsx
components/tools/: flight.tsx  registry.tsx  stock-card.tsx  stock.tsx  tool-renderer.tsx  vendor-onboarding.tsx
components/ui/: carousel.tsx  chart.tsx  tabs.tsx
lib/: utils.ts
