[project]
name = "experiment-admin-ai-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
serve = "uvicorn api.main:app --reload --port 8000"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a18",
]
